--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Platzi</title>
+    <title>PRUEBA_AWS_EC2</title>
 <style>
 @import url(http://fonts.googleapis.com/css?family=Amatic+SC:700);
 
