--- a/templates/test.html
+++ b/templates/test.html
@@ -2,11 +2,11 @@
 {% block body %}
 
 <div class="block1">
-<h1>Hello {{name}}!</h1>
-  <h2>Here is an interesting quote for you: </h2>
+<h1>Hola {{name}}!</h1>
+  <h2>Te dejo una bonita frase: </h2>
   <p>
-"The limits of my language are the limits of my mind. All I know is what I have words for."
+"Si pudiera vivir nuevamente mi vida, en la próxima trataría de cometer más errores. - Borges"
   </p>
-<img src="http://www.naturalprogramming.com/images/smilingpython.gif">
+<img src="https://github.com/JCEG/aws-platzi-python/blob/master/borges.jpg?raw=true">
 </div>
 {% endblock %}
